- Update to latest release.

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "merriweather.doc.tar.xz": 12e2b4e27228da233f54667c31a526f302b48ee2
-  "merriweather.tar.xz": 11fddf6ff390e016cc0e474126a670c410c88f7f
+  merriweather.doc.tar.xz: 7f8484d16bce89a1571837599bcd9116d6ab099a
+  merriweather.tar.xz: 93b716ce682a1f57bc6aa4c26602d1d388010f5e
