Fix versioning scheme, update, clean up

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  merriweather.doc.tar.xz: 9b2f402f9ee50b5af41b503fd236ad581585748c
-  merriweather.tar.xz: 8e08abd9ce6afdba3f60b278e38fd8e812342942
+  merriweather.doc.r64452.tar.xz: badc816944cbee4d6799f0b3da3d70689b4974cf
+  merriweather.r64452.tar.xz: 9bc46dadccf53fa6171db83e0ba34dcef10730db
